# AMSwarmPy

./: .gitignore  CMakeLists.txt  pyproject.toml
cpp/src/: drone.cpp
examples/: compare.py  pysimulate.py  simulate.py  utils.py
examples/amswarmpy/: __init__.py  amsolver.py  constraint.py  core.py  data.py  drone.py  settings.py  solve.py  spline.py  swarm.py  utils.py
params/: settings.yaml
